API Deployments Configs/customer-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-api-pod02
  labels:
    app: customer-api-pod02
    service: customer-api-pod02
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: customer-api-pod02
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-api-pod02
  labels:
    app: customer-api-pod02
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-api-pod02
      version: v1
  template:
    metadata:
      labels:
        app: customer-api-pod02
        version: v1
    spec:
      containers:
      - name: customer-api-pod02
        image: quay.io/acctrainings/customer-api-gold:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Route
metadata:
  name: customer-api-pod02
  labels:
    app: customer-api-pod02
spec:
  to:
    kind: Service
    name: customer-api-pod02
