API Deployments Configs/policy-api-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-api-main
  labels:
    app: policy-api-main
    service: policy-api-main
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: policy-api-main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-api-release-1.0.0
  labels:
    app: policy-api-main
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: policy-api-main
      version: v1
  template:
    metadata:
      labels:
        app: policy-api-main
        version: v1
    spec:
      containers:
      - name: policy-api-main
        image: quay.io/acctrainings/policy-api-gold:release-1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Route
metadata:
  name: policy-api-main
  labels:
    app: policy-api-main
spec:
  to:
    kind: Service
    name: policy-api-main
